--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
   nginx:
     image: nginx:latest
     container_name: superset_nginx
+    platform: linux/amd64/v8
     restart: unless-stopped
     ports:
       - "80:80"
@@ -42,6 +43,7 @@ services:
   redis:
     image: redis:7
     container_name: superset_cache
+    platform: linux/amd64/v8
     restart: unless-stopped
     ports:
       - "127.0.0.1:6379:6379"
@@ -52,6 +54,7 @@ services:
     env_file: docker/.env
     image: postgres:15
     container_name: superset_db
+    platform: linux/amd64/v8
     restart: unless-stopped
     ports:
       - "127.0.0.1:5432:5432"
@@ -63,12 +66,11 @@ services:
     env_file: docker/.env
     image: *superset-image
     container_name: superset_app
+    platform: linux/amd64/v8
     command: ["/app/docker/docker-bootstrap.sh", "app"]
     restart: unless-stopped
     ports:
       - 8088:8088
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     user: *superset-user
     depends_on: *superset-depends-on
     volumes: *superset-volumes
@@ -77,12 +79,11 @@ services:
 
   superset-websocket:
     container_name: superset_websocket
+    platform: linux/amd64
     build: ./superset-websocket
     image: superset-websocket
     ports:
       - 8080:8080
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     depends_on:
       - redis
     # Mount everything in superset-websocket into container and
@@ -121,6 +122,7 @@ services:
   superset-node:
     image: node:16
     container_name: superset_node
+    platform: linux/amd64/v8
     command: ["/app/docker/docker-frontend.sh"]
     env_file: docker/.env
     depends_on: *superset-depends-on
@@ -129,14 +131,13 @@ services:
   superset-worker:
     image: *superset-image
     container_name: superset_worker
+    platform: linux/amd64/v8
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file: docker/.env
     restart: unless-stopped
     depends_on: *superset-depends-on
     user: *superset-user
     volumes: *superset-volumes
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     healthcheck:
       test: ["CMD-SHELL", "celery -A superset.tasks.celery_app:app inspect ping -d celery@$$HOSTNAME"]
     # Bump memory limit if processing selenium / thumbnails on superset-worker
@@ -146,6 +147,7 @@ services:
   superset-worker-beat:
     image: *superset-image
     container_name: superset_worker_beat
+    platform: linux/amd64/v8
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
     env_file: docker/.env
     restart: unless-stopped
@@ -158,6 +160,7 @@ services:
   superset-tests-worker:
     image: *superset-image
     container_name: superset_tests_worker
+    platform: linux/amd64/v8
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file: docker/.env
     environment:
